<?xml version="1.0"?>
<package format="2">
  <name>swarm_ros_bridge</name>
  <version>1.0.0</version>
  <description>The swarm_ros_bridge package</description>

  <maintainer email="shupeixuan@qq.com">shupeixuan</maintainer>

  <license>BSD-3-Clause</license>
  
  <url>https://wiki.ros.org/swarm_ros_bridge</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libzmqpp-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libzmqpp-dev</exec_depend>

</package>
